name:
version:
license-file:
author:
maintainer:
category:
build-type:
cabal-version:
morse
0.1.0.0
LICENSE
Chris Allen
cma@bitemyapp.com
Text
Simple
>=1.10
library
exposed-modules:
ghc-options:
build-depends:
Morse
-Wall -fwarn-tabs
base >=4.7 && <5
, containers
, QuickCheck
hs-source-dirs:
src
default-language:
Haskell2010
executable morse
main-is:
ghc-options:
hs-source-dirs:
build-depends:
Main.hs
-Wall -fwarn-tabs
src
base >=4.7 && <5
, containers
, morse
, QuickCheck
default-language:
Haskell2010CHAPTER 14. TESTING
556
test-suite tests
ghc-options: -Wall -fno-warn-orphans
type: exitcode-stdio-1.0
main-is: tests.hs
hs-source-dirs: tests
build-depends:
base
, containers
, morse
, QuickCheck
default-language:
Haskell2010